--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <body>
     <header>
       <nav>
-        <a class="link logo" href="./index.html">WebStudio</a>
+        <a class="link logo" href="./index.html"><span class="web">Web</span><span class="webstudio">Studio</span></a>
         <ul>
-          <li><a class="link studio" href="./index.html">Студія</a></li>
-          <li><a class="link current portfolio" href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#" class="link contacts">Контакти</a></li>
+          <li><a class="link header-links" href="./index.html">Студія</a></li>
+          <li><a class="link header-links" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link header-links" href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -35,7 +35,7 @@
         <button type="button" class="button">Замовити послугу</button>
       </section>
       <section class="section">
-        <h2 hidden>особливості</h2>
+        <h2 class="visually-hidden">особливості</h2>
         <ul class="features">
           <li>
             <h3 class="features-title">Увага до деталей</h3>
@@ -100,21 +100,21 @@
     </main>
 
     <footer class="footer">
-      <a class="link logo" href="">WebStudio</a>
+      <a class="link logo" href="./index.html"><span class="web">Web</span><span class="webstudio">Studio</span></a>
       <address>
         <ul>
           <li>
             <a
-              class="link"
+              class="link address"
               href="https://goo.gl/maps/SCHz1njMYFFsMZ7L9"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
+          <li><a class="link contantacts-footer" href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
           <li>
-            <a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link contantacts-footer" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
