--- a/portfolio.html
+++ b/portfolio.html
@@ -9,22 +9,22 @@
     <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-     <nav class="site-nav">
-        <a class="link logo" href="./index.html">WebStudio</a>
- <ul>
-    <li><a class="link link-blue studio" href="./index.html">Студія</a></li>
-    <li><a class="link link current portfolio" href="./portfolio.html">Портфоліо</a></li>
-    <li><a class="link contacts" href="#">Контакти</a></li>
-    </ul>
- </nav>
-  <ul>
-    <li> <a class="link-blue mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li> <a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
-  </ul>
-  </header>
+  <header>
+      <nav>
+        <a class="link logo" href="./index.html"><span class="web">Web</span><span class="webstudio">Studio</span></a>
+        <ul>
+          <li><a class="link header-links" href="./index.html">Студія</a></li>
+          <li><a class="link header-links" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link header-links" href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com" class="link mail">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link phone">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
   <main>
-    <h1 hidden>Наші проекти</h1>
+    <h1 class="visually-hidden">Наші проекти</h1>
     <section>
         <ul>
     <li><button type="button" class="button-white">Усі</button>
@@ -112,24 +112,25 @@
 
   </main>
  
-  <footer class="footer"> 
-  <a class="link" href="">WebStudio</a>
-  <address>
-   <ul>
-    <li>
-     <a class="link" href="https://goo.gl/maps/SCHz1njMYFFsMZ7L9"
-        target="_blank"
-        rel="noopener noreferrer nofollow">Київ, пр-т Лесі Українки, 26</a>   
-    </li>
-    <li>
-    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a><br> 
-    </li>
-    <li>
-    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-    </li>
-   </ul>
- 
-  </address>
-  </footer>
+  <footer class="footer">
+      <a class="link logo" href="./index.html"><span class="web">Web</span><span class="webstudio">Studio</span></a>
+      <address>
+        <ul>
+          <li>
+            <a
+              class="link address"
+              href="https://goo.gl/maps/SCHz1njMYFFsMZ7L9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a class="link contantacts-footer" href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
+          <li>
+            <a class="link contantacts-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
 </body>
 </html>
