--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a class="link logo" href="./index.html"><span class="web">Web</span><span class="webstudio">Studio</span></a>
         <ul>
-          <li><a class="link header-links" href="./index.html">Студія</a></li>
+          <li><a class="link header-links current" href="./index.html">Студія</a></li>
           <li><a class="link header-links" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="link header-links" href="#">Контакти</a></li>
         </ul>
@@ -34,28 +34,28 @@
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="button">Замовити послугу</button>
       </section>
-      <section class="section">
+      <section>
         <h2 class="visually-hidden">особливості</h2>
-        <ul class="features">
+        <ul class="features-list">
           <li>
             <h3 class="features-title">Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="portfolio-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
             <h3 class="features-title">Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="portfolio-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
             <h3 class="features-title">Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="portfolio-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <h3 class="features-title">Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="portfolio-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
-      <section class="section1">
+      <section>
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
           <li><img src="./img/img1.jpg" alt="Людина працює за компьютером" width="370" /></li>
@@ -70,37 +70,37 @@
         </ul>
       </section>
 
-      <section class="section2">
+      <section class="section-ourteam">
         <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./img/img4.jpg" alt="Усміхнений молодий чоловік в окулярах" width="270" />
 
             <h3 class="h3">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p class="portfolio-text">Product Designer</p>
           </li>
           <li>
             <img src="./img/img5.jpg" alt="Усміхнена молода жінка в окулярах" width="270" />
             <h3 class="h3">Ольга Рєпіна</h3>
-            <p>Product Designer</p>
+            <p class="portfolio-text">Product Designer</p>
           </li>
           <li>
             <img src="./img/img6.jpg" alt="Усміхнений юнак" width="270" />
             <h3 class="h3">Микола Тарасов</h3>
-            <p>Product Designer</p>
+            <p class="portfolio-text">Product Designer</p>
           </li>
 
           <li>
             <img src="./img/img7.jpg" alt="Молодий чоловік в окулярах" width="270" />
             <h3>Михайло Єрмаков</h3>
-            <p>Product Designer</p>
+            <p class="portfolio-text">Product Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="link logo" href="./index.html"><span class="web">Web</span><span class="webstudio">Studio</span></a>
+      <a class="link logo" href="./index.html"><span class="web">Web</span><span class="webstudio-footer">Studio</span></a>
       <address>
         <ul>
           <li>
@@ -112,9 +112,9 @@
               >Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a class="link contantacts-footer" href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
+          <li><a class="link contacts-footer" href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
           <li>
-            <a class="link contantacts-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
